--- a/src/SimpleButton/package.json
+++ b/src/SimpleButton/package.json
@@ -1,9 +1,9 @@
 {
   "name": "@chandu6839/simplebutton",
-  "version": "0.0.12",
+  "version": "0.0.2",
   "main": "build/index.js",
   "module": "build/index.es.js",
-  "repository": "git@github.com:chandu6839/Component-lib.git",
+  "repository": "https://github.com:chandu6839/Component-lib.git",
   "files": [
     "build"
   ],
