--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "build-all": "rollup-c",
     "build": "run() { rollup -c --package=$1; }; run",
+    "test": "run() { cd src/$1 && rimraf build; }; run",
     "clean": "run() { cd src/$1 && rimraf build; }; run",
     "version-and-publish": "run() { yarn clean $1 && yarn build $1 && version=$(cd src/$1 && npm version --no-git-tag-version $2) && (cd src/$1 && npm publish --registry=https://npm.pkg.github.com/) && git add src/$1 && git commit -m \"$1 - $version\" && git push; }; run",
     "patch": "run() { yarn version-and-publish $1 patch; }; run",
